--- a/logs-processing.ipynb
+++ b/logs-processing.ipynb
@@ -5,7 +5,7 @@
    "id": "b01a8f90",
    "metadata": {},
    "source": [
-    "## Processamento de Logs Nasa  \n",
+    "### processing and structuring NASA logs with apache spark  \n",
     "\n",
     "Oficial dataset: https://ita.ee.lbl.gov/html/contrib/NASA-HTTP.html  "
    ]
